# Moon

./: CMakeLists.txt  LICENSE  README.md
cmake/: CompileShaders.cmake
core/deferredGraphics/: CMakeLists.txt  README.md  compile.bat  deferredGraphics.cpp  deferredGraphics.h
core/deferredGraphics/renderStages/: deferredAttachments.h  deferredLink.cpp  deferredLink.h  graphics.cpp  graphics.h  layerIndex.h  layersCombiner.cpp  layersCombiner.h
core/deferredGraphics/renderStages/source/: ambientLighting.cpp  base.cpp  extension.cpp  lighting.cpp  lightingPipelines.cpp
core/deferredGraphics/shaders/ambientLightingPass/: ambientLighting.frag  ambientLighting.vert
core/deferredGraphics/shaders/base/: base.frag  base.vert  basePBR.vert  baseSimple.vert  material.glsl
core/deferredGraphics/shaders/directionalLightingPass/: directionalLighting.frag  directionalLighting.vert
core/deferredGraphics/shaders/layersCombiner/: layersCombiner.frag  layersCombiner.vert
core/deferredGraphics/shaders/linkable/: deferredLinkable.frag  deferredLinkable.vert
core/deferredGraphics/shaders/outlining/: outlining.frag  outlining.vert  outliningPBR.vert  outliningSimple.vert
core/deferredGraphics/shaders/pointLightingPass/: pointLighting.frag  pointLighting.vert  pointLightingBase.glsl
core/deferredGraphics/shaders/spotLightingPass/: spotLighting.frag  spotLighting.vert  spotLightingBase.glsl  spotLightingCircle.frag  spotLightingSquare.frag  spotLightingSquare.vert
core/entities/: CMakeLists.txt  baseCamera.cpp  baseCamera.h  baseObject.cpp  baseObject.h  directionalLight.cpp  directionalLight.h  pointLight.cpp  pointLight.h  skyboxObject.cpp  skyboxObject.h  spotLight.cpp  spotLight.h
core/graphicsManager/: CMakeLists.txt  README.md  graphicsInterface.h  graphicsLinker.cpp  graphicsLinker.h  graphicsManager.cpp  graphicsManager.h  linkable.h
core/imguiGraphics/: CMakeLists.txt  README.md  imguiGraphics.cpp  imguiGraphics.h  imguiLink.cpp  imguiLink.h
core/implementations/: CMakeLists.txt  baseCamera.cpp  baseCamera.h  baseObject.cpp  baseObject.h  directionalLight.cpp  directionalLight.h  pointLight.cpp  pointLight.h  skyboxObject.cpp  skyboxObject.h  spotLight.cpp  spotLight.h
core/interfaces/: CMakeLists.txt  camera.cpp  camera.h  light.cpp  light.h  masksGeneration.h  model.cpp  model.h  object.cpp  object.h
core/math/: CMakeLists.txt  dualQuaternion.cpp  dualQuaternion.h  linearAlgebra.h  matrix.cpp  matrix.h  quaternion.cpp  quaternion.h  vector.cpp  vector.h
core/models/: CMakeLists.txt  gltfmodel.h  plymodel.h
core/models/gltfmodel/: animation.cpp  animation.h  gltfmesh.h  gltfmodel.cpp  gltfmorph.h  gltfnodedata.h  gltfskeleton.h  gltfutils.h  instance.h  loadAnimations.cpp  loadMaterials.cpp  loadNode.cpp  loadSkins.cpp  loadTextures.cpp  loadVertexBuffer.cpp  loadVertices.cpp  loadVertices.h  mesh.h  node.h  nodes.cpp  primitive.h  skin.h  tinyGLTF.h
core/models/plymodel/: plymodel.cpp
core/rayTracingGraphics/: CMakeLists.txt  README.md  boundingBoxGraphics.cpp  boundingBoxGraphics.h  rayTracingGraphics.cpp  rayTracingGraphics.h  rayTracingLink.cpp  rayTracingLink.h
core/rayTracingGraphics/cudaRayTracing/: CMakeLists.txt
core/rayTracingGraphics/cudaRayTracing/graphics/: cudaRayTracing.cu  cudaRayTracing.h
core/rayTracingGraphics/cudaRayTracing/hitable/: hitable.cu  hitable.h  objectInstance.h  sphere.cu  sphere.h  triangle.cu  triangle.h
core/rayTracingGraphics/cudaRayTracing/materials/: material.cu  material.h
core/rayTracingGraphics/cudaRayTracing/math/: box.h  mat4.h  quat.h  quat2.h  ray.h  vec4.h
core/rayTracingGraphics/cudaRayTracing/models/: model.cu  model.h  objmodel.cu  objmodel.h
core/rayTracingGraphics/cudaRayTracing/transformational/: camera.cu  camera.h  object.h
core/rayTracingGraphics/cudaRayTracing/utils/: buffer.h  devicep.h  hitableArray.cu  hitableArray.h  hitableContainer.cu  hitableContainer.h  kdTree.cu  kdTree.h  operations.cu  operations.h  primitive.cu  primitive.h  stack.h  texture.cu  texture.h  timer.h
core/rayTracingGraphics/shaders/boundingBox/: boundingBox.frag  boundingBox.vert
core/rayTracingGraphics/shaders/cudaBoundingBox/: boundingBox.frag  boundingBox.vert
core/rayTracingGraphics/shaders/linkable/: linkable.frag  linkable.vert
core/transformationals/: CMakeLists.txt  cameras.cpp  cameras.h  group.cpp  group.h  lights.cpp  lights.h  objects.cpp  objects.h  transformational.h
core/utils/: CMakeLists.txt  attachments.cpp  attachments.h  buffer.cpp  buffer.h  cursor.cpp  cursor.h  depthMap.cpp  depthMap.h  device.cpp  device.h  memory.cpp  memory.h  operations.cpp  operations.h  pipelineNode.cpp  pipelineNode.h  queueFamily.cpp  queueFamily.h  swapChain.cpp  swapChain.h  texture.cpp  texture.h  types.h  vkdefault.cpp  vkdefault.h  window.h
core/workflows/: CMakeLists.txt  bloom.cpp  bloom.h  blur.cpp  blur.h  boundingBox.cpp  boundingBox.h  compile.bat  compile.sh  postProcessing.cpp  postProcessing.h  scattering.cpp  scattering.h  selector.cpp  selector.h  shadow.cpp  shadow.h  skybox.cpp  skybox.h  ssao.cpp  ssao.h  sslr.cpp  sslr.h  workflow.cpp  workflow.h
core/workflows/shaders/__methods__/: colorFunctions.glsl  defines.glsl  geometricFunctions.glsl  lightDrop.glsl  math.glsl  pbr.glsl  shadow.glsl
core/workflows/shaders/bloom/: bloom.frag  bloom.vert  bloomDownsample.comp  bloomUpsample.comp
core/workflows/shaders/boundingBox/: boundingBox.frag  boundingBox.vert
core/workflows/shaders/customFilter/: customFilter.frag
core/workflows/shaders/gaussianBlur/: blur.glsl  xBlur.frag  yBlur.frag
core/workflows/shaders/postProcessing/: postProcessing.frag
core/workflows/shaders/scattering/: IntersectionOutput.glsl  cone.glsl  scattering.frag  scatteringBase.glsl  scatteringSpot.vert  scatteringSpotCircle.frag  scatteringSpotCircle.vert  scatteringSpotSquare.frag
core/workflows/shaders/selector/: selector.comp  selector.frag
tests/testCuda/: CMakeLists.txt  testCuda.cpp  testCuda.h
tests/testScene/: CMakeLists.txt  controledObject.h  testScene.cpp  testScene.h  testSceneGui.h
(+41 files in other folders)
